# bouncing_balls

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
balls/: CMakeLists.txt  Circle.cpp  Circle.hpp  Shader.cpp  Shader.hpp  Window.cpp  Window.hpp  glad.c  main.cpp  simple.frag  simple.vert
include/: glfw  glm
include/glad/: glad.h
